clusters/work/infra/config/tekton-pipelines/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-ci
