clusters/work/infra/config/tekton-pipelines/trigger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-eventlistener
  namespace: tekton-ci
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: tekton-listener.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: el-demo-nginx-listener
            port:
              number: 8080
  tls:
  - secretName: tekton-listener-tls
    hosts:
    - tekton-listener.lab.local
